--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,16 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.7.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
